# autogluon

./: .codeguru-ignore.yml  .gitattributes  .gitignore  .my-creds  .pre-commit-config.yaml  AGENTS.md  AWESOME.md  CITING.md  CONTRIBUTING.md  CUSTOM_CV_FEATURE.md  Jenkinsfile  LICENSE  NOTICE  README.ipynb  README.md  ROADMAP.md  SECURITY.md  VERSION  asv.conf.json  autogluon-distillation-sbx.ipynb  custom.py  custom_tabtrans_old.py  full_install.bat  full_install.sh  hashestobenchmark.txt  main.py  pyproject.toml  requirements.txt  script.py  setup.cfg  setup.py  setup.py_  tarball.tar  temp.pth  test.ipynb  test_auto_ml_pipeline.py  test_bagged_ensemble_custom_cv.py  test_cv_feature_generator.ipynb  test_cvsplitter_integration.py  test_phase3_predictor_integration.py  (+2 more)
autogluon/: __init__.py  core.py  distributed.py  pyproject.toml  setup.py  version.py
autogluon/.colab_ssh/: authorized_keys
autogluon/basic/: __init__.py  decorators.py  deprecate.py  serialization.py  space.py  task.py
autogluon/contrib/enas/: __init__.py  enas.py  enas_net.py  enas_scheduler.py  enas_utils.py
autogluon/contrib/nlp/: __init__.py  attention_cell.py  initializer.py  registry.py
autogluon/contrib/torch/: __init__.py  enas.py  enas_scheduler.py  enas_utils.py  mbconv.py  torch_utils.py
autogluon/contrib/wire/: __init__.py  wire.py  wire_efficientnet.py  wire_net.py  wire_resnet.py  wire_scheduler.py
autogluon/core/: __init__.py  core.py  decorator.py  loss.py  optimizer.py  optimizers.py  shutdown.py  space.py  task.py
autogluon/core/nas/: efficientnet.py
autogluon/core/scheduler/: rl_scheduler.py
autogluon/core/searcher/: searcher.py
autogluon/core/utils/: serialization.py
autogluon/dataset/: __init__.py  dataset.py  transforms.py  utils.py
autogluon/distributed/: __init__.py  dist_fifo.py  dist_hyperband.py  dist_reporter.py  dist_rl_scheduler.py  dist_scheduler.py  local_helper.py  remote.py  remote_manager.py  ssh_helper.py  tmux-cssh
autogluon/distribution/: __init__.py  sample.py
autogluon/estimator/: __init__.py  estimator.py  event_handler.py
autogluon/image_classification/: __init__.py  image_classification.py  nets.py
autogluon/initializers/: __init__.py  initializers.py  utils.py
autogluon/legacy/: __init__.py  fifo.py  hyperband.py  legacy_objects.py  scheduler.py  space.py
autogluon/loss/: __init__.py  losses.py  utils.py
autogluon/main/: __init__.py
autogluon/main/core/: decorator.py  task.py
autogluon/main/model_zoo/: model_store.py
autogluon/main/scheduler/: fifo.py  hyperband.py  rl_scheduler.py
autogluon/main/searcher/: gp_searcher.py  grid_searcher.py  rl_controller.py  skopt_searcher.py
autogluon/main/utils/: augment.py  custom_queue.py  openml_download.py  util_decorator.py
autogluon/metric/: __init__.py  metrics.py  utils.py
autogluon/model_zoo/: model_store.py  model_zoo.py
autogluon/model_zoo/models/: efficientnet.py  standford_dog_models.py  utils.py
autogluon/nas/: __init__.py  efficientnet.py  enas.py  mbconv.py  model_store.py  model_zoo.py  utils.py
autogluon/nas/models/: efficientnet.py  mbconv.py
autogluon/network/: __init__.py  nets.py  utils.py
autogluon/optim/: __init__.py  optims.py  utils.py
autogluon/optimizer/: __init__.py  optimizers.py  utils.py
autogluon/resource/: dist_manager.py  manager.py  nvutil.py  resource.py
autogluon/scheduler/: __init__.py  enas_scheduler.py  enas_utils.py  fifo.py  hyperband.py  hyperband_promotion.py  hyperband_stopping.py  reporter.py  resource_manager.py  rl_scheduler.py  scheduler.py
autogluon/scheduler/legacy/: __init__.py  fifo.py  hyperband.py  scheduler.py
autogluon/scheduler/remote/: __init__.py  cli.py  cli_utils.py  dask_scheduler.py  local_helper.py  remote.py  remote_manager.py  ssh_helper.py
autogluon/scheduler/resource/: __init__.py  dist_manager.py  manager.py  nvutil.py  resource.py
autogluon/searcher/: __init__.py  bohb.py  default_arguments.py  gp_searcher.py  grid_searcher.py  rl_controller.py  sample.py  searcher.py  searcher_factory.py  skopt_searcher.py
autogluon/space/: __init__.py  search_space.py  utils.py
autogluon/tabular/benchmark/: SelfBenchmarks.py
autogluon/tabular/contrib/: nn_nlp_classification_model.py  nn_nlp_lm_model.py
autogluon/tabular/data/: cleaner.py  label_cleaner.py
autogluon/tabular/feature_generators/: abstract_feature_generator.py  auto_ml_feature_generator.py
autogluon/tabular/metrics/: __init__.py
autogluon/tabular/ml/: constants.py  utils.py
autogluon/tabular/utils/: s3_utils.py
autogluon/task/: __init__.py  __init__.py.orig
autogluon/task/base/: __init__.py  base_predictor.py  base_task.py
autogluon/task/forecasting/: dataset.py  forecasting.py  predictor.py  preset_configs.py
autogluon/terminator/: __init__.py  terminator.py
autogluon/utils/: __init__.py  augment.py  backend.py  data_analyzer.py  dataloader.py  dataset.py  default_arguments.py  deprecate.py  edict.py  file_helper.py  files.py  learning_rate.py  miscs.py  mxboard_handler.py  mxutils.py  openml_download.py  pil_transforms.py  plots.py  queue.py  resource.py  sanity_check.py  serialization.py  ssh_helper.py  sync_remote.py  tqdm.py  try_import.py  verbosity.py  visualizer.py
common/: pyproject.toml  setup.py
common/tests/: conftest.py  test_check_style.py
core/: pyproject.toml  setup.py
core/tests/: conftest.py  test_check_style.py
features/: NOTICE  pyproject.toml  setup.py
features/tests/: test_check_style.py
multimodal/: pyproject.toml  setup.py  test.py
multimodal/tests/: README.md  conftest.py  hf_dataset_list.yaml  hf_model_list.yaml  test_check_style.py
tabular/: .gitignore  Config  DEVELOPMENT.md  README.md  benchmarks.py  pyproject.toml  requirements.txt  requirements_local.txt  setup.cfg  setup.py  setupNotes.txt
tabular/benchmark/: SelfBenchmarks.py
tabular/doc/: conf.py  index.rst
tabular/test/: README.md  test_tabular.py
tabular/tests/: conftest.py  test_check_style.py
timeseries/: pyproject.toml  setup.py
timeseries/tests/: conftest.py  test_check_style.py
(+5023 files in other folders)
