[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autogluon.common"
# Version is dynamic: supplied by the thin setup.py (base VERSION + AUTOGLUON_VERSION_SUFFIX).
dynamic = ["version"]
description = "Fast and Accurate ML in 3 Lines of Code"
license = "Apache-2.0"
requires-python = ">=3.10,<3.14"
# Caps mirror core/_setup_utils.DEPENDENT_PACKAGES (a full migration would centralize these
# once at the workspace root as [tool.uv] constraint-dependencies).
dependencies = [
  "numpy>=1.25.0,<2.5.0",
  "pandas>=2.0.0,<2.4.0",
  "pyarrow>=7.0.0,<21.0.0",
  "boto3>=1.10,<2",
  "psutil>=5.7.3,<7.2.0",
  "tqdm>=4.38,<5",
  "requests",
  "joblib>=1.2,<1.7",
  "pyyaml>=5.0",
  "packaging>=20",
  "scikit-learn>=1.4.0,<1.8.0",
]

[project.optional-dependencies]
tests = ["pytest", "types-requests", "types-setuptools", "pytest-mypy"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["autogluon.*"]
namespaces = true
