[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autogluon.common"
# Version is dynamic: supplied by the thin setup.py (base VERSION + AUTOGLUON_VERSION_SUFFIX).
dynamic = ["version"]
description = "Fast and Accurate ML in 3 Lines of Code"
license = "Apache-2.0"
requires-python = ">=3.10,<3.14"
# Bare names are version-constrained by [tool.uv] constraint-dependencies at the workspace root
# (the former DEPENDENT_PACKAGES caps, now centralized in one place).
dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "boto3",
  "psutil",
  "tqdm",
  "requests",
  "joblib",
  "pyyaml",
  "packaging",
  "scikit-learn",
]

[project.optional-dependencies]
tests = ["pytest", "types-requests", "types-setuptools", "pytest-mypy"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["autogluon.*"]
namespaces = true
