[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autogluon.multimodal"
dynamic = ["version"]
description = "Fast and Accurate ML in 3 Lines of Code"
license = "Apache-2.0"
requires-python = ">=3.10,<3.14"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "scikit-learn",
  "Pillow",
  "tqdm",
  "boto3",
  "torch",
  "lightning",
  "transformers[sentencepiece]",
  "accelerate",
  "fsspec[http]<=2025.3",
  "requests>=2.30,<3",
  "jsonschema>=4.18,<4.24",
  "seqeval>=1.2.2,<1.3.0",
  "evaluate>=0.4.0,<0.5.0",
  "timm>=0.9.5,<1.0.7",
  "torchvision>=0.21.0,<0.25.0",
  "scikit-image>=0.19.1,<0.26.0",
  "text-unidecode>=1.3,<1.4",
  "torchmetrics>=1.2.0,<1.8",
  "omegaconf>=2.1.1,<2.4.0",
  "autogluon.core[raytune]",
  "autogluon.features",
  "autogluon.common",
  "pytorch-metric-learning>=1.3.0,<2.9",
  "nlpaug>=1.1.10,<1.2.0",
  "nltk>=3.4.5,<3.10",
  "openmim>=0.3.7,<0.4.0",
  "defusedxml>=0.7.1,<0.7.2",
  "jinja2>=3.0.3,<3.2",
  "tensorboard>=2.9,<3",
  "pytesseract>=0.3.9,<0.4",
  "nvidia-ml-py3>=7.352.0,<8.0",
  "pdf2image>=1.17.0,<1.19",
]

[project.optional-dependencies]
tests = [
  "ruff",
  "datasets>=2.16.0,<3.6.0",
  "tensorrt>=8.6.0,<10.9.1; platform_system=='Linux' and python_version<'3.11'",
  # Sync ONNX requirements with tabular
  "onnx>=1.13.0,!=1.16.2,<1.21.0; platform_system=='Windows'",
  "onnx>=1.13.0,<1.21.0; platform_system!='Windows'",
  "onnxruntime>=1.17.0,<1.24.0",
  "onnxruntime-gpu>=1.17.0,<1.24.0; platform_system != 'Darwin' and platform_machine != 'aarch64'",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["autogluon.*"]
namespaces = true

[tool.setuptools.package-data]
"autogluon.multimodal" = [
  "configs/data/*.yaml",
  "configs/model/*.yaml",
  "configs/optim/*.yaml",
  "configs/env/*.yaml",
  "configs/distiller/*.yaml",
  "configs/matcher/*.yaml",
]
