[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autogluon.tabular"
dynamic = ["version"]
description = "Fast and Accurate ML in 3 Lines of Code"
license = "Apache-2.0"
requires-python = ">=3.10,<3.14"
# Bare names are version-constrained by [tool.uv] constraint-dependencies at the workspace root.
# Package-specific caps are kept inline. Siblings resolve via [tool.uv.sources] for dev.
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "scikit-learn",
  "networkx",
  "autogluon.core",
  "autogluon.features",
]

[project.optional-dependencies]
lightgbm = ["lightgbm>=4.0,<4.7"]
catboost = ["catboost>=1.2,<1.3"]
xgboost = ["xgboost>=2.0,<3.2"]
realmlp = ["pytabkit>=1.7.2,<1.8"]
interpret = ["interpret-core>=0.7.2,<0.8"]
fastai = ["spacy<3.9", "torch", "fastai>=2.3.1,<2.8.6"]
tabm = ["torch"]
tabpfn = ["tabpfn>=7.0,<7.2"]
tabdpt = ["tabdpt>=1.1.11,<1.2"]
tabpfnmix = ["torch", "huggingface_hub[torch]", "einops>=0.7,<0.9"]
mitra = ["loguru", "einx", "omegaconf", "torch", "transformers", "huggingface_hub[torch]", "einops>=0.7,<0.9"]
tabicl = ["tabicl>=2.0,<2.1"]
ray = ["autogluon.core[all]"]
skex = ["scikit-learn-intelex>=2025.0,<2025.10"]
imodels = ["imodels>=1.3.10,<2.1.0"]
skl2onnx = [
  "skl2onnx>=1.15.0,<1.20.0",
  # Sync ONNX requirements with multimodal
  "onnx>=1.13.0,!=1.16.2,<1.21.0; platform_system=='Windows'",
  "onnx>=1.13.0,<1.21.0; platform_system!='Windows'",
  "onnxruntime>=1.17.0,<1.24.0",
  "onnxruntime-gpu>=1.17.0,<1.24.0; platform_system != 'Darwin' and platform_machine != 'aarch64'",
]
# Aggregates use self-referential extras (resolved against this package's own extras).
all = ["autogluon.tabular[lightgbm,catboost,xgboost,fastai,tabm,mitra,ray]"]
tabarena = ["autogluon.tabular[all,interpret,tabdpt,tabicl,tabpfn,realmlp]"]
tests = ["autogluon.tabular[interpret,tabdpt,tabicl,tabpfn,realmlp,tabpfnmix,imodels,skl2onnx]"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["autogluon.*"]
namespaces = true
