[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autogluon.timeseries"
dynamic = ["version"]
description = "Fast and Accurate ML in 3 Lines of Code"
license = "Apache-2.0"
requires-python = ">=3.10,<3.14"
dependencies = [
  "joblib",
  "numpy",
  "scipy",
  "pandas",
  "torch",
  "lightning",
  "transformers[sentencepiece]",
  "accelerate",
  "gluonts>=0.15.0,<0.17",
  "networkx",
  "statsforecast>=1.7.0,<2.0.2",
  "mlforecast>=0.14.0,<0.15.0",
  "utilsforecast>=0.2.3,<0.2.12",
  "coreforecast>=0.0.12,<0.0.17",
  "fugue>=0.9.0",
  "tqdm",
  "orjson~=3.9",
  "einops>=0.7,<1",
  "chronos-forecasting>=2.2.2,<2.4",
  "peft>=0.13.0,<0.18",
  "tensorboard>=2.9,<3",
  "autogluon.core",
  "autogluon.common",
  "autogluon.features",
  "autogluon.tabular[catboost,lightgbm,xgboost]",
]

[project.optional-dependencies]
tests = ["pytest", "ruff>=0.0.285", "flaky>=3.7,<4", "pytest-timeout>=2.1,<3"]
ray = ["autogluon.core[raytune]"]
all = ["autogluon.timeseries[ray]"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["autogluon.*"]
namespaces = true
